@@ -3,9 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- verify: recent files menu
 - delete: no vfs update
-- plugin download dir not saved
 - close dockable fucks up because C+e sends focus to the text area
 - isn't fsb dir search supposed to use selected file's extension?
 - quicknotepad: use a box not a tool bar
